--- a/src/libraries/System.Private.Uri/src/System.Private.Uri.csproj
+++ b/src/libraries/System.Private.Uri/src/System.Private.Uri.csproj
@@ -24,6 +24,7 @@
     <Compile Include="$(CommonPath)System\Net\IPv6AddressHelper.Common.cs">
       <Link>System\IPv6AddressHelper.Common.cs</Link>
     </Compile>
+    <Compile Include="System\CharHelper.cs" />
     <Compile Include="System\IriHelper.cs" />
     <Compile Include="System\UncNameHelper.cs" />
     <Compile Include="System\Uri.cs" />
