--- a/src/libraries/System.Private.Uri/src/System.Private.Uri.csproj
+++ b/src/libraries/System.Private.Uri/src/System.Private.Uri.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FxCopBaseline.cs" />
+    <Compile Include="System\CharHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="System\DomainNameHelper.cs" />
