--- a/src/libraries/System.Private.Uri/tests/UnitTests/System.Private.Uri.Unit.Tests.csproj
+++ b/src/libraries/System.Private.Uri/tests/UnitTests/System.Private.Uri.Unit.Tests.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <!-- Production code references -->
     <Compile Include="..\..\src\System\UriHelper.cs" />
+    <Compile Include="..\..\src\System\PercentEncodingHelper.cs" />
     <Compile Include="..\..\src\System\IriHelper.cs" />
     <Compile Include="..\..\src\System\UriEnumTypes.cs" />
     <Compile Include="$(CommonPath)System\Text\ValueStringBuilder.cs">
